samples/_failures_safe/1761181094_fbb7ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef5b4bd6.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_ef5b4bd6.c:155:5: error: expected expression at end of input
  155 |     if (n == 1) return
      |     ^~
./samples/SAFE/__tmp_ef5b4bd6.c:155:5: error: expected declaration or statement at end of input
